Edited page margins, fixed footer spacing

--- a/app/_components/AboutMe.css
+++ b/app/_components/AboutMe.css
@@ -27,7 +27,17 @@
   justify-content: space-between;
   gap: 2rem;
   margin-top: 2rem;
+  align-items: center;
+}
 
+#hobbies {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  gap: 2rem;
+  margin-top: 2rem;
   align-items: center;
 }
 
@@ -122,6 +132,18 @@
   #text h2 {
     font-size: 1.5rem;
     margin: 0;
+  }
+
+  #hobbies {
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 3rem;
+    margin-top: 2rem;
+    align-items: center;
   }
 }
 
