--- a/app/_components/Footer.css
+++ b/app/_components/Footer.css
@@ -35,7 +35,7 @@
 
 #footer {
   background-color: #a7c3e8;
-  position: absolute;
+  position: relative;
   width: 100%;
   bottom: 0;
   left: 0;
