--- a/app/globals.css
+++ b/app/globals.css
@@ -28,15 +28,17 @@ h2 {
   margin: 0;
 }
 
-#bodychange {
+main {
   padding: 0 2rem;
   position: relative;
   height: 100%;
 }
 
 @media (min-width: 1024px) {
-  #bodychange {
+  main {
     padding: 0 4rem;
+    max-width: 60rem;
+    margin: auto;
   }
 }
 
